--- a/MATA.Resources/Properties/Resources.en.resx
+++ b/MATA.Resources/Properties/Resources.en.resx
@@ -234,6 +234,9 @@
   <data name="Save" xml:space="preserve">
     <value>Kaydet</value>
   </data>
+  <data name="SeqNo" xml:space="preserve">
+    <value>No</value>
+  </data>
   <data name="Stores" xml:space="preserve">
     <value>Şantiyeler</value>
   </data>
